--- a/css/styles.css
+++ b/css/styles.css
@@ -7,16 +7,15 @@ body, h1, p, ul, li {
 
 body {
     line-height: 1.6;
-    background-color: #2E2E2E; /* for overall background color, change as needed */
-    -webkit-overflow-scrolling: touch; /* for touch scrolling on mobile devices */
+    background-color: #000000;
+    -webkit-overflow-scrolling: touch;
 }
 
 /* Hide the scrollbar for Webkit browsers */
 body::-webkit-scrollbar {
-    width: 0; /* For vertical scrollbars */
-    height: 0; /* For horizontal scrollbars */
+    width: 0;
+    height: 0;
 }
-
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Times New Roman', Times, serif;
@@ -25,7 +24,7 @@ h1, h2, h3, h4, h5, h6 {
 header {
     display: flex;
     align-items: center;
-    background-color: #2E2E2E;
+    background-color: #0a121c;
     padding: 10px 0;
     position: sticky;
     top: 0;
@@ -36,7 +35,8 @@ header {
 
 .header-container {
     max-width: 1700px;
-    margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     align-items: center;
     padding: 0 30px;
@@ -45,20 +45,20 @@ header {
 }
 
 .logo {
-    width: 150px;
-    height: 30px;
+    width: 250px;
+    height: 50px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     margin-right: 20px;
-    flex-shrink: 0; /* Ensure the logo doesn't shrink */
+    flex-shrink: 0;
 }
 
 header nav ul {
     display: flex;
     list-style-type: none;
     align-items: center;
-    margin-left: 20px; /* Space after the logo */
+    margin-left: 20px;
 }
 
 header nav li {
@@ -79,16 +79,16 @@ header nav a:hover {
 }
 
 .section-paper, .section-solid {
-    width: 100%;
-    text-align: center;
+    width: auto;
+    text-align: left;
     background-size: cover;
     background-position: center;
     box-sizing: border-box;
 }
 
 .section-paper {
-    background-color: #333333;
-    padding: 200px 0;
+    background-color: #000000;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
 }
@@ -98,9 +98,29 @@ header nav a:hover {
     padding: 50px 0;
 }
 
-.logo-container, .text-container {
+.text-container {
     flex: 1;
+    padding-right: 10px;
+    padding-top: 10px;
+    color: white;
+    font-size: 3em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+}
+
+.logo-container img {
+    flex: 1;
+    width: 900px;
     padding: 10px;
+}
+
+.responsive-screenshot_1 {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
 }
 
 iframe {
@@ -115,34 +135,122 @@ footer {
     width: 100%;
 }
 
-/* Media Queries for Mobile Optimization */
+.slogan-container {
+    background-image: url('D:/LandingBWB/images/landscape_1.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: 100%;
+    text-align: center;
+    padding: 500px 0;
+}
+
+.slogan-text {
+    font-size: 2em;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10px 20px;
+    border-radius: 8px;
+    display: inline-block;
+    margin-top: -250px;
+}
+.mobile-nav {
+    display: none;
+}
+
+.dropdown-menu {
+    position: absolute;
+    top: 40px; /* Adjust based on the height of your menu icon and desired gap */
+    right: 10px; /* A little space from the right */
+    background-color: #0a121c; /* Same color as your header for consistency */
+    border-radius: 5px; /* Optional: for rounded corners */
+    z-index: 999; /* Ensure it overlays other elements */
+}
+
+.dropdown-menu ul {
+    list-style-type: none;
+}
+
+.dropdown-menu li {
+    padding: 10px 20px; /* Padding for better touch experience */
+}
+
+.dropdown-menu a {
+    color: #fff;
+    text-decoration: none;
+}
+
+
+
+/* Adjustments for mobile */
 @media (max-width: 600px) {
+    /* Reset padding and margins for header elements */
     header {
-        flex-direction: column;
-        padding: 10px 15px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
     
+    .header-container {
+        padding: 0; 
+    }
+
     .logo {
-        margin: 10px 0;
-        align-self: center; /* Center the logo on mobile */
+        width: 150px;
+        height: 30px;
+        margin-right: 10px; /* Reduced margin for the logo */
     }
 
     header nav ul {
-        justify-content: center; /* Center the nav items on mobile */
-        margin-left: 0; /* Reset the margin on mobile */
+        margin-left: 10px; /* Reduced margin for the nav list */
     }
 
     header nav li {
-        margin: 0 5px; /* Reducing margin to save space */
+        margin: 0 5px; /* Reduced margin for nav items */
     }
 
-    .section-paper {
-        flex-direction: column;
+    /* Adjust font sizes for mobile */
+    h1, h2, h3, h4, h5, h6 {
+        font-size: 1em; /* Adjust this value based on your preference */
     }
 
-    .logo-container, .text-container {
-        margin-bottom: 20px;
+    .text-container {
+        font-size: 2em; /* Adjusting the text size */
+    }
+
+    .slogan-container {
+        padding: 150px 0;
+    }
+
+    .slogan-text {
+        font-size: 1.5em;
+        margin-top: -125px; /* Adjusted margin-top value */
+    }
+
+    iframe {
+        width: 100%;
+        height: auto;
     }
 	
-	
+	    /* Hide the desktop nav */
+    .desktop-nav {
+        display: none;
+    }
+    
+    /* Display mobile nav */
+    .mobile-nav {
+        display: flex;
+        justify-content: flex-end;
+        width: 100%;
+		
+    }
+
+#menu-icon {
+    width: 30px; /* Adjust as needed */
+    height: auto;
+    cursor: pointer;
+}
+
+    .dropdown-menu {
+        display: none;
+    }
 }
