fix images path

--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ footer {
 }
 
 .slogan-container {
-    background-image: url('D:/LandingBWB/images/landscape_1.png');
+    background-image: url('images/landscape_1.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
