--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/* Reset and base styles */
 body, h1, p, ul, li {
     margin: 0;
     padding: 0;
@@ -11,7 +10,6 @@ body {
     -webkit-overflow-scrolling: touch;
 }
 
-/* Hide the scrollbar for Webkit browsers */
 body::-webkit-scrollbar {
     width: 0;
     height: 0;
@@ -74,10 +72,6 @@ header nav a {
     font-family: 'Times New Roman', Times, serif;
 }
 
-header nav a:hover {
-    background-color: rgba(255, 255, 255, 0.3);
-}
-
 .section-paper, .section-solid {
     width: auto;
     text-align: left;
@@ -135,7 +129,7 @@ footer {
     width: 100%;
 }
 
-  .slogan-container {
+.slogan-container {
     background-image: url('../images/landscape_1.png');
     background-size: cover;
     background-repeat: no-repeat;
@@ -143,10 +137,7 @@ footer {
     width: 100%;
     text-align: center;
     padding: 500px 0;
-} 
-
-
-
+}
 
 .slogan-text {
     font-size: 2em;
@@ -157,17 +148,18 @@ footer {
     display: inline-block;
     margin-top: -250px;
 }
+
 .mobile-nav {
     display: none;
 }
 
 .dropdown-menu {
     position: absolute;
-    top: 40px; /* Adjust based on the height of your menu icon and desired gap */
-    right: 10px; /* A little space from the right */
-    background-color: #0a121c; /* Same color as your header for consistency */
-    border-radius: 5px; /* Optional: for rounded corners */
-    z-index: 999; /* Ensure it overlays other elements */
+    top: 40px;
+    right: 10px;
+    background-color: #0a121c;
+    border-radius: 5px;
+    z-index: 999;
 }
 
 .dropdown-menu ul {
@@ -175,7 +167,7 @@ footer {
 }
 
 .dropdown-menu li {
-    padding: 10px 20px; /* Padding for better touch experience */
+    padding: 10px 20px;
 }
 
 .dropdown-menu a {
@@ -183,41 +175,86 @@ footer {
     text-decoration: none;
 }
 
+.image-gallery {
+    padding: 20px;
+}
 
+.gallery-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-/* Adjustments for mobile */
+.gallery-image {
+    width: 23%;
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+
+.expanded-bg {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+.expanded-image {
+    width: 80%;
+    max-width: 80%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1010;
+}
+
+.close-icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    z-index: 1020;
+    padding: 10px;
+    margin: 5px;
+    width: 25px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 50%;
+}
+
 @media (max-width: 600px) {
-    /* Reset padding and margins for header elements */
     header {
         padding-left: 10px;
         padding-right: 10px;
     }
-    
+
     .header-container {
-        padding: 0; 
+        padding: 0;
     }
 
     .logo {
         width: 150px;
         height: 30px;
-        margin-right: 10px; /* Reduced margin for the logo */
+        margin-right: 10px;
     }
 
     header nav ul {
-        margin-left: 10px; /* Reduced margin for the nav list */
+        margin-left: 10px;
     }
 
     header nav li {
-        margin: 0 5px; /* Reduced margin for nav items */
+        margin: 0 5px;
     }
 
-    /* Adjust font sizes for mobile */
     h1, h2, h3, h4, h5, h6 {
-        font-size: 1em; /* Adjust this value based on your preference */
+        font-size: 1em;
     }
 
     .text-container {
-        font-size: 2em; /* Adjusting the text size */
+        font-size: 2em;
     }
 
     .slogan-container {
@@ -226,34 +263,39 @@ footer {
 
     .slogan-text {
         font-size: 1.5em;
-        margin-top: -125px; /* Adjusted margin-top value */
+        margin-top: -125px;
     }
 
     iframe {
         width: 100%;
         height: auto;
     }
-	
-	    /* Hide the desktop nav */
+
     .desktop-nav {
         display: none;
     }
-    
-    /* Display mobile nav */
+
     .mobile-nav {
         display: flex;
         justify-content: flex-end;
         width: 100%;
-		
     }
 
-#menu-icon {
-    width: 30px; /* Adjust as needed */
-    height: auto;
-    cursor: pointer;
-}
+    #menu-icon {
+        width: 30px;
+    }
 
     .dropdown-menu {
         display: none;
+    }
+
+    .expanded-image {
+        width: 90%;
+    }
+
+    .close-icon {
+        top: 5%;
+        right: 5%;
+        width: 20px;
     }
 }
