--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body, h1, p, ul, li {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+     font-family: 'Times New Roman', Times, serif;
 }
 
 body {
@@ -71,16 +71,33 @@ header nav a {
     transition: background-color 0.3s;
     font-family: 'Times New Roman', Times, serif;
 }
-
+/*
 .section-paper, .section-solid {
     width: auto;
     text-align: left;
     background-size: cover;
     background-position: center;
     box-sizing: border-box;
-}
-
+}*/
+/*
 .section-paper {
+	width: auto;
+    text-align: left;
+    background-size: cover;
+    background-position: center;
+    box-sizing: border-box;
+	
+    background-color: #000000;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+}*/
+.section-paper {
+    width: auto;
+    text-align: left;
+    background-size: cover;
+    background-position: center;
+    box-sizing: border-box;
     background-color: #000000;
     padding: 10px;
     display: flex;
@@ -88,6 +105,13 @@ header nav a {
 }
 
 .section-solid {
+	width: auto;
+    text-align: center;
+    background-size: cover;
+    background-position: center;
+    box-sizing: border-box;
+	
+	
     background-color: #000;
     padding: 50px 0;
 }
@@ -95,13 +119,14 @@ header nav a {
 .text-container {
     flex: 1;
     padding-right: 10px;
+	padding-left: 33px;
     padding-top: 10px;
     color: white;
-    font-size: 3em;
+    font-size: 2em;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: left;
     text-align: left;
 }
 
@@ -254,7 +279,7 @@ footer {
     }
 
     .text-container {
-        font-size: 2em;
+        font-size: 1em;
     }
 
     .slogan-container {
@@ -298,4 +323,7 @@ footer {
         right: 5%;
         width: 20px;
     }
+	
+	 {
+
 }
