--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,14 @@ footer {
     background-color: #0a121c;
     border-radius: 5px;
     z-index: 999;
+    display: none;
 }
+
+
+
+    .dropdown-menu.show {
+        display: block !important;
+    }
 
     .dropdown-menu ul {
         list-style-type: none;
@@ -295,10 +302,6 @@ footer {
         width: 30px;
     }
 
-    .dropdown-menu {
-        display: none;
-    }
-
     .expanded-image {
         width: 90%;
     }
@@ -309,61 +312,48 @@ footer {
         width: 20px;
     }
 
-    /* Responsive changes for .section-paper */
     .section-paper {
-        font-size: 0.8em; /* Adjust font size for mobile */
-        flex-direction: column-reverse; /* Change the order: image on top, text below */
+        font-size: 0.8em;
+        flex-direction: column-reverse;
     }
 
         .section-paper .text-container,
         .section-paper .logo-container {
-            width: 100%; /* Take the full width of the container */
-            text-align: center; /* Center the text */
+            width: 100%;
+            text-align: center;
             padding: 0px;
         }
 
         .section-paper .logo-container {
-            margin-bottom: 10px; /* Add some space between the image and the text */
+            margin-bottom: 10px;
             padding: 0px;
         }
 }
 
-/* Responsive adjustments for tablets and mid-sized screens */
 @media (min-width: 600px) and (max-width: 1024px) {
     .section-paper {
-        font-size: 1em; /* Adjust font size for tablets */
-        padding: 20px; /* Add padding for better spacing */
-        flex-direction: column; /* Ensure elements stack vertically on smaller screens */
+        font-size: 1em;
+        padding: 20px;
+        flex-direction: column;
         align-items: center;
     }
 
         .section-paper .text-container,
         .section-paper .logo-container {
-            width: 100%; /* Make elements take full width */
-            padding: 0 20px; /* Add horizontal padding for spacing */
-            text-align: center; /* Center align text and images */
+            width: 100%;
+            padding: 0 20px;
+            text-align: center;
         }
 
     .slogan-container {
-        padding: 250px 0; /* Reduce padding for better fit */
-        background-size: cover; /* Ensure background image scales appropriately */
+        padding: 250px 0;
+        background-size: cover;
         background-position: center center;
     }
 
     .slogan-text {
-        font-size: 1.8em; /* Reduce font size for slogan text */
-        margin-top: -100px; /* Adjust margin to center text better */
-        padding: 10px 15px; /* Ensure padding around text scales */
+        font-size: 1.8em;
+        margin-top: -100px;
+        padding: 10px 15px;
     }
-
-    .dropdown-menu {
-        display: none;
-    }
-
-    .dropdown-menu.show {
-        display: block;
-    }
-
-
-
 }
