--- a/LandingPage.css
+++ b/LandingPage.css
@@ -138,7 +138,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .footer {
     background-color: #000;
-    color: #fff;
+    color: #2e103f;
     text-align: center;
 }
 
@@ -255,7 +255,7 @@ h1, h2, h3, h4, h5, h6 {
     .text-content {
         flex: 1;
         max-width: 50%;
-        text-align: left;
+        text-align: center;
     }
 
     .content img {
