--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
 .fixed-header {
-    background-color: #000;
+    background-color: #2e103f;
     color: #2e103f;
     position: fixed;
     top: 0;
